Updated the text and alignment fixed

--- a/dimagi/pages/static/style/pages/sectors/maternal-and-child-health.scss
+++ b/dimagi/pages/static/style/pages/sectors/maternal-and-child-health.scss
@@ -104,7 +104,7 @@
 }
 
 .programs .image.crs{
-  height: 275px;
+  width: 309px;
 }
 
 .link-gray:hover,.link-gray:focus{
